更改配置方式

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,10 @@
-jdbc.user=root
-jdbc.password=05280122
-jdbc.driverClass=com.mysql.cj.jdbc.Driver
-# 处理服务器乱码问题
-jdbc.jdbcUrl=jdbc:mysql://localhost:3306/AssistentCloud?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
+database.root=root
+database.password=zojian
+database.driver=com.mysql.cj.jdbc.Driver
+database.url=jdbc:mysql://localhost:3306/AssistentCloud?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&useSSL=true
+
+hibernate.dialect  = org.hibernate.dialect.MySQL57Dialect
+hibernate.show_sql  = true
+hibernate.dialect.storage_engine = innodb
+hibernate.format_sql = true
+hibernate.hbm2ddl.auto  = update
