--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,22 @@
             <version>1.3.2</version>
         </dependency>
 
+        <!-- Microsoft工具 -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.16</version>
+        </dependency>
+
+        <!-- Microsoft工具-ooxml -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.16</version>
+        </dependency>
+
+
+
         <!--slf4j 日志工具-->
         <dependency>
             <groupId>org.slf4j</groupId>
