--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,19 +5,12 @@
 <web-app>
     <display-name>Archetype Created Web Application</display-name>
     <filter>
-        <filter-name>hibernateFilter</filter-name>
-        <filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class>
-        <init-param>
-            <param-name>singleSession</param-name>
-            <param-value>true</param-value>
-        </init-param>
-        <init-param>
-            <param-name>flushMode</param-name>
-            <param-value>AUTO</param-value>
-        </init-param>
+        <filter-name>Set Encoding</filter-name>
+        <!--包名+类名-->
+        <filter-class>com.kexie.acloud.util.SetEncodingFilter</filter-class>
     </filter>
     <filter-mapping>
-        <filter-name>hibernateFilter</filter-name>
+        <filter-name>Set Encoding</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
