--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 database.root=root
-database.password=zojian
+database.password=05280122
 database.driver=com.mysql.cj.jdbc.Driver
 database.url=jdbc:mysql://localhost:3306/AssistentCloud?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&useSSL=true
 
