--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,14 @@
             <version>5.0.1.Final</version>
         </dependency>
 
+        <!-- c3p0 连接池组件 -->
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5.2</version>
+        </dependency>
+
+
         <!-- 文件上传工具-->
         <dependency>
             <groupId>commons-fileupload</groupId>
