--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,7 +1,8 @@
 database.root=root
 database.password=05280122
 database.driver=com.mysql.cj.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/AssistentCloud?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&useSSL=true
+database.url=jdbc:mysql://112.74.214.252:3306/AssistentCloud?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&useSSL=true
+#database.url=jdbc:mysql://127.0.0.1:3306/AssistentCloud?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8&useSSL=true
 
 hibernate.dialect  = org.hibernate.dialect.MySQL57Dialect
 hibernate.show_sql  = true
